--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>此应用需要蓝牙权限来连接和控制设备</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>此应用需要蓝牙权限来连接和控制设备</string>
 </dict>
 </plist>
