--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>此应用需要蓝牙权限来连接和控制设备</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>此应用需要蓝牙权限来连接和控制设备</string>
 </dict>
 </plist>
