--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   collection: ^1.18.0
   intl: ^0.19.0
   tim:
+    git:
+      url: https://github.com/mobius-toy/tim.git
+      ref: main
+
+dependency_overrides:
+  tim:
     path: ../tim
 
 dev_dependencies:
