--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   tim:
     git:
       url: https://github.com/mobius-toy/tim.git
-      ref: main
+      ref: v0.0.2
 
 dependency_overrides:
   tim:
