--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
   collection: ^1.18.0
   intl: ^0.19.0
   tim:
