feat: 使用flutter_launcher_icons适配Android 12+图标
- 更新pubspec.yaml配置，添加adaptive_icon_background和adaptive_icon_foreground
- 使用原图标作为前景，蓝色背景作为自适应图标背景
- 自动生成Android 12+自适应图标配置文件
- 生成多密度drawable资源文件
- 创建colors.xml文件定义背景颜色
- 支持圆形、方形等各种系统图标形状
- 保持原图标不变，仅添加自适应图标支持

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,9 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icon/icon.png"
   min_sdk_android: 21
+  # Android 12+ 自适应图标支持
+  adaptive_icon_background: "#1E88E5"  # 蓝色背景
+  adaptive_icon_foreground: "assets/icon/icon.png"  # 使用原图标作为前景
   web:
     generate: true
     image_path: "assets/icon/icon.png"
