feat: 添加二维码扫描和波形播放功能
- 新增二维码扫描功能，支持扫描 TRD: 前缀的压缩波形数据
- 实现全屏扫描页面，自动开启扫描和退出
- 添加波形数据模型和解压缩功能
- 集成波形预览和播放控制
- 支持多种波形形状（线性、缓入、缓出、保持、正弦）
- 添加相机权限配置和错误处理
- 修复 Navigator 锁定问题
- 优化异步上下文处理

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,7 @@
 	<string>此应用需要蓝牙权限来连接和控制设备</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>此应用需要蓝牙权限来连接和控制设备</string>
+	<key>NSCameraUsageDescription</key>
+	<string>此应用需要相机权限来扫描二维码</string>
 </dict>
 </plist>
