--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   collection: ^1.18.0
   intl: ^0.19.0
   webview_flutter: ^4.4.2
+  mobile_scanner: ^5.0.0
   tim:
     git:
       url: https://github.com/mobius-toy/tim.git
